# healthstream-rag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/instructions/: review.instructions.md
.github/workflows/: ci.yml  (+2 more)
problem/: problem.md
solution/: CHANGELOG.md  Makefile  README.md  docker-compose.yml
solution/backend/: .env.aws.example  .env.example  .env.local  DEMO.md  Dockerfile  Dockerfile.lambda  pyproject.toml  requirements-lambda.txt
solution/backend/app/: config.py
solution/backend/app/api/: dependencies.py  lambda_handler.py  main.py  query_controller.py
solution/backend/app/api/routes/: collections.py  health.py  ingest.py  query.py
solution/backend/app/core/: base_embedder.py  base_generator.py  base_reranker.py  base_vector_db.py
solution/backend/app/embedders/: bedrock_titan.py  factory.py  local_embedder.py
solution/backend/app/generators/: anthropic_generator.py  bedrock_generator.py  factory.py
solution/backend/app/guardrails/: pipeline.py
solution/backend/app/loaders/: base.py  ehr_loader.py  fhir_loader.py  healthkit_loader.py
solution/backend/app/metadata_store/: dynamo_store.py
solution/backend/app/middleware/: patient_isolation.py  phi_redaction.py
solution/backend/app/models/: schemas.py
solution/backend/app/retrievers/: bm25_retriever.py  hybrid_retriever.py  reranker.py  vector_retriever.py
solution/backend/app/vector_db/: chroma_db.py  factory.py  s3_vectors.py
solution/backend/chroma_data/: chroma.sqlite3
solution/backend/data/: golden_test_set.yaml  sample_data.json
solution/backend/scripts/: aws_demo.sh  demo.sh  evaluate.py  ingest_samples.py  package_lambda.sh
solution/backend/tests/: conftest.py  test_collections.py  test_guardrails.py  test_health.py  test_ingest.py  test_patient_isolation.py  test_phi_redaction.py  test_query.py  test_vector_db.py
(+43 files in other folders)
