[project]
name = "healthstream-rag"
version = "1.0.0"
description = "HIPAA-compliant RAG chatbot for personal health data"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    "mangum>=0.19.0",
    "numpy>=1.26.0",
    "boto3>=1.36.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
]

[dependency-groups]
local = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    {include-group = "local"},
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
